added Navigation Bar

--- a/projects-page/projects.html
+++ b/projects-page/projects.html
@@ -11,6 +11,42 @@
 </head>
 
 <body>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light navbar-custom" style="background-color: #941120;">
+        <a class="navbar-brand" href="#">
+            <img src="../assets/CMU_White.png" width="350" height="35" alt="" loading="lazy">
+          </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto nav-justified">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Projects</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Become A Partner
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" target="_blank" href="https://airtable.com/appoZ4Oki9OwZgFuz/shrfdCoRYnlhz0Vbu">Consulting</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Web Design</a>
+              </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Testimonials</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Qatar</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
+
     <div class="container">
         <div class="form-row">
             <div class="form-group col-sm-6 col-md-3" id="sdg-filter">
