--- a/tools/nav-bar/navBar.html
+++ b/tools/nav-bar/navBar.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="../../tools/nav-bar/navStyles.css">
 </head>
 
-<nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #941120;">
+<nav class="navbar sticky-top navbar-expand-lg navbar-light navbar-custom" style="background-color: #941120;">
     <a class="navbar-brand" href="#">
-        <img src="../../assets/CMU_White.png" width="350" height="35" alt="" loading="lazy">
+        <img src="../assets/CMU_White.png" width="350" height="35" alt="" loading="lazy">
       </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
         </li>
       </ul>
     </div>
-  </nav>
+</nav>
 <body>
     
 </body>
