--- a/projects-page/projects.html
+++ b/projects-page/projects.html
@@ -56,7 +56,6 @@
                         Select SDG
                     </button>
                     <div class="dropdown-menu px-2 w-100" aria-labelledby="sdgGoalsButton">
-                        <!-- extra: promote health -->
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="nopoverty" id="nopovertyCheckbox">
                             <label class="form-check-label" for="nopovertyCheckbox">
@@ -286,11 +285,7 @@
             <div class="form-group col-sm-12 col-md-6" id="search-filter">
                 <input type="text" class="form-control" id="search" placeholder="Search...">
             </div>
-
-            <h2 class="mx-auto">Spring 2023</h2>
-            <div id="projects2023"></div>
-            <h2 class="mx-auto">Spring 2022</h2>
-            <div id="projects2022"></div>
+            <div id="all-projects" class="w-100"></div>
         </div>
 
         <div class="modal fade" id="projectModal" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel"
@@ -316,7 +311,8 @@
 
                         <h6 id="projectDescription" class="mt-3 text-left font-weight-normal"></h6>
 
-                        <button id="execSummaryButton" type="button" class="btn mt-3 mx-auto">Consulting Team Summary</button>
+                        <button id="execSummaryButton" type="button" class="btn mt-3 mx-auto">Consulting Team
+                            Summary</button>
                     </div>
 
                 </div>
