changed border color of hamburger

--- a/testimonials-page/testimonials.html
+++ b/testimonials-page/testimonials.html
@@ -15,7 +15,7 @@
         <a class="navbar-brand" href="#">
             <img src="../assets/CMU_White.png" width="350" height="35" alt="" loading="lazy">
           </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       
