--- a/testimonials-page/testimonials.html
+++ b/testimonials-page/testimonials.html
@@ -21,7 +21,7 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto nav-justified">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
@@ -37,7 +37,7 @@
                 <a class="dropdown-item" href="#">Web Design</a>
               </div>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="#">Testimonials</a>
             </li>
             <li class="nav-item">
@@ -46,6 +46,16 @@
           </ul>
         </div>
     </nav>
+
+
+
+  <footer class="footer">
+    <img src="../assets/CMU_White.png" alt="CMU logo">
+    <a href="https://www.cmu.edu/information-systems/">CMU Information Systems</a>
+    <p>Acknowledgements: This website is the outcome of a student project in Mobile Web Design and Development (67-240) and is maintained by student led effort. 
+      Credits: Website prototyping and development © Erin Dieringer, Zoe Feng, Arnav Luthra, Abbey Mui and Pooja Penninti. Website maintenance © Stephanie Pang, Samara McCallum, Emmet Mack, Allen Yao, Benjamin Chen, Chloe Deng, Amalia Kutin, Evelynn Chen, and Leo Hsu. 
+      Faculty advisors: Prof. Sara Moussawi, Prof. Larry Heimann, and Prof. Julia Poepping.</p>
+  </footer>
 
 </body>
 </html>
