--- a/projects-page/projects.html
+++ b/projects-page/projects.html
@@ -4,6 +4,7 @@
 <head>
     <script src="./projects.js" defer></script>
     <link rel="stylesheet" href="./projects.css">
+    <link rel="stylesheet" href="../tools/nav-bar/navStyles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
