--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../cmu-is-consulting/tools/nav-bar/navStyles.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -10,4 +11,42 @@
 
 <body>
     <!-- homepage code -->
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light navbar-custom" style="background-color: #941120;">
+        <a class="navbar-brand" href="#">
+            <img src="../cmu-is-consulting/assets/CMU_White.png" width="350" height="35" alt="" loading="lazy">
+        </a>
+        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto nav-justified">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../cmu-is-consulting/projects-page/projects.html">Projects <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Become A Partner
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" target="_blank"
+                            href="https://airtable.com/appoZ4Oki9OwZgFuz/shrfdCoRYnlhz0Vbu">Consulting</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" target="_blank" href="https://www.cmu.edu/">Web Design</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../cmu-is-consulting/testimonials-page/testimonials.html">Testimonials</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_blank" href="https://www.cmu.edu/">Qatar</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </body>
