--- a/projects-page/projects.html
+++ b/projects-page/projects.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto nav-justified">
                 <li class="nav-item ">
-                    <a class="nav-link" href="#">Home </a>
+                    <a class="nav-link" href="../index.html">Home </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Projects <span class="sr-only">(current)</span></a>
@@ -42,7 +42,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Testimonials</a>
+                    <a class="nav-link" href="../testimonials-page/testimonials.html">Testimonials</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="https://www.cmu.edu/">Qatar</a>
