--- a/testimonials-page/testimonials.html
+++ b/testimonials-page/testimonials.html
@@ -8,7 +8,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../tools/nav-bar/navStyles.css">
-    <title>Document</title>
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light navbar-custom" style="background-color: #941120;">
@@ -22,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto nav-justified">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projects</a>
+              <a class="nav-link" href="../projects-page/projects.html">Projects</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -34,14 +33,14 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" target="_blank" href="https://airtable.com/appoZ4Oki9OwZgFuz/shrfdCoRYnlhz0Vbu">Consulting</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Web Design</a>
+                <a class="dropdown-item" href="https://www.cmu.edu/">Web Design</a>
               </div>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="#">Testimonials</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Qatar</a>
+                <a class="nav-link" href="https://www.cmu.edu/">Qatar</a>
             </li>
           </ul>
         </div>
