fixed credits and logo siding issue

--- a/testimonials-page/testimonials.html
+++ b/testimonials-page/testimonials.html
@@ -52,7 +52,7 @@
     <img src="../assets/CMU_White.png" alt="CMU logo">
     <a href="https://www.cmu.edu/information-systems/">CMU Information Systems</a>
     <p>Acknowledgements: This website is the outcome of a student project in Mobile Web Design and Development (67-240) and is maintained by student led effort. 
-      Credits: Website prototyping and development © Erin Dieringer, Zoe Feng, Arnav Luthra, Abbey Mui and Pooja Penninti. Website maintenance © Stephanie Pang, Samara McCallum, Emmet Mack, Allen Yao, Benjamin Chen, Chloe Deng, Amalia Kutin, Evelynn Chen, and Leo Hsu. 
+      Credits: Website prototyping and development © Amalia Kutin, Evelynn Chen, Leo Hsu (2023), Erin Dieringer, Zoe Feng, Arnav Luthra, Abbey Mui and Pooja Penninti (2014). Website maintenance © Stephanie Pang, Samara McCallum, Emmet Mack, Allen Yao, Benjamin Chen, and Chloe Deng. 
       Faculty advisors: Prof. Sara Moussawi, Prof. Larry Heimann, and Prof. Julia Poepping.</p>
   </footer>
 
