--- a/projects-page/projects.html
+++ b/projects-page/projects.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light navbar-custom" style="background-color: #941120;">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand mr-auto" href="#">
             <img src="../assets/CMU_White.png" width="350" height="35" alt="" loading="lazy">
         </a>
         <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
