--- a/index.html
+++ b/index.html
@@ -49,4 +49,14 @@
             </ul>
         </div>
     </nav>
+
+    <footer class="blog-footer">
+        <a href="https://www.cmu.edu/information-systems/" target="_blank">
+        <img src="../cmu-is-consulting/assets/CMU_White.png" alt="CMU logo"></a>
+        <br>
+        <p>Acknowledgements: This website is the outcome of a student project in Mobile Web Design and Development (67-240) and is maintained by student led effort. <br>
+          Credits: Website prototyping and development © Amalia Kutin, Evelynn Chen, Leo Hsu (2023), Erin Dieringer, Zoe Feng, Arnav Luthra, Abbey Mui and Pooja Penninti (2015). <br>
+          Website maintenance © Stephanie Pang, Samara McCallum, Emmet Mack, Allen Yao, Benjamin Chen, and Chloe Deng. <br>
+          Faculty advisors: Prof. Sara Moussawi, Prof. Naama Ilany-Tzur, Prof. Larry Heimann, and Prof. Julia Poepping.</p>
+    </footer>
 </body>
