moved dropdown right and changed dropdown menu background color to gray

--- a/projects-page/projects.html
+++ b/projects-page/projects.html
@@ -34,7 +34,7 @@
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Become A Partner
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" target="_blank"
                             href="https://airtable.com/appoZ4Oki9OwZgFuz/shrfdCoRYnlhz0Vbu">Consulting</a>
                         <div class="dropdown-divider"></div>
@@ -333,7 +333,7 @@
           Website maintenance © Stephanie Pang, Samara McCallum, Emmet Mack, Allen Yao, Benjamin Chen, and Chloe Deng. <br>
           Faculty advisors: Prof. Sara Moussawi, Prof. Naama Ilany-Tzur, Prof. Larry Heimann, and Prof. Julia Poepping.</p>
     </footer>
-    
+
 </body>
 
 </html>
