--- a/testimonials-page/testimonials.html
+++ b/testimonials-page/testimonials.html
@@ -30,7 +30,7 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Become A Partner
               </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" target="_blank" href="https://airtable.com/appoZ4Oki9OwZgFuz/shrfdCoRYnlhz0Vbu">Consulting</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="https://www.cmu.edu/">Web Design</a>
