--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Become A Partner
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" target="_blank"
                             href="https://airtable.com/appoZ4Oki9OwZgFuz/shrfdCoRYnlhz0Vbu">Consulting</a>
                         <div class="dropdown-divider"></div>
