--- a/testimonials-page/testimonials.html
+++ b/testimonials-page/testimonials.html
@@ -33,14 +33,14 @@
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" target="_blank" href="https://airtable.com/appoZ4Oki9OwZgFuz/shrfdCoRYnlhz0Vbu">Consulting</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="https://www.cmu.edu/">Web Design</a>
+                <a class="dropdown-item" href="https://www.cmu.edu/" target="_blank">Web Design</a>
               </div>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="#">Testimonials</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://www.cmu.edu/">Qatar</a>
+                <a class="nav-link" href="https://www.cmu.edu/" target="_blank">Qatar</a>
             </li>
           </ul>
         </div>
