--- a/testimonials-page/testimonials.html
+++ b/testimonials-page/testimonials.html
@@ -45,7 +45,36 @@
           </ul>
         </div>
     </nav>
+    
 
+    <!-- MODALS -->
+    <div class="container">
+      <div class="modal fade" id="testimonialModal" tabindex="-1" role="dialog" aria-labelledby="testimonialModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="testimonialModalLabel">Title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body text-center">
+                        <div id="testimonialImageModal">
+                            <img src="" alt="Image" class="img-fluid mw-100 mh-100 mb-3" id="modalImage">
+                        </div>
+
+                        <h6 id="position" class="text-left font-weight-normal"></h6>
+
+                        <h6 id="organization" class="text-left font-weight-normal"></h6>
+
+                        <h6 id="quote" class="mt-3 text-left font-weight-normal"></h6>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
   <footer class="blog-footer">
