--- a/testimonials-page/testimonials.html
+++ b/testimonials-page/testimonials.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light navbar-custom" style="background-color: #941120;">
         <a class="navbar-brand" href="#">
-            <img src="../assets/CMU_White.png" width="350" height="35" alt="" loading="lazy">
+            <img src="../assets/redesignLogo.png" width="160" height="60" alt="" loading="lazy">
           </a>
         <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -79,7 +79,7 @@
 
   <footer class="blog-footer">
     <a href="https://www.cmu.edu/information-systems/" target="_blank">
-    <img src="../assets/CMU_White.png" alt="CMU logo"></a>
+    <img src="../assets/redesignLogo.png" alt="CMU logo" width="200px" height="160px"></a>
     <br>
     <p>Acknowledgements: This website is the outcome of a student project in Mobile Web Design and Development (67-240) and is maintained by student led effort. <br>
       Credits: Website prototyping and development © Amalia Kutin, Evelynn Chen, Leo Hsu (2023), Erin Dieringer, Zoe Feng, Arnav Luthra, Abbey Mui and Pooja Penninti (2015). <br>
