fixed sizing for redesigned logo

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <body>
     <!-- homepage code -->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light navbar-custom" style="background-color: #941120;">
-        <a class="navbar-brand" href="#">
-            <img src="../cmu-is-consulting/assets/CMU_White.png" width="350" height="35" alt="" loading="lazy">
+        <a class="navbar-brand mr-auto" href="#">
+            <img src="./assets/redesignLogo.png" width="186.6" height="60" alt="CMU IS Logo" loading="lazy">
         </a>
-        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -26,7 +27,8 @@
                     <a class="nav-link" href="#">Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../cmu-is-consulting/projects-page/projects.html">Projects <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../cmu-is-consulting/projects-page/projects.html">Projects <span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -52,11 +54,16 @@
 
     <footer class="blog-footer">
         <a href="https://www.cmu.edu/information-systems/" target="_blank">
-        <img src="../cmu-is-consulting/assets/CMU_White.png" alt="CMU logo"></a>
+            <img src="./assets/redesignLogo.png" width="186.6" height="75" alt="CMU IS Logo"></a>
+        </a>
         <br>
-        <p>Acknowledgements: This website is the outcome of a student project in Mobile Web Design and Development (67-240) and is maintained by student led effort. <br>
-          Credits: Website prototyping and development © Amalia Kutin, Evelynn Chen, Leo Hsu (2023), Erin Dieringer, Zoe Feng, Arnav Luthra, Abbey Mui and Pooja Penninti (2015). <br>
-          Website maintenance © Stephanie Pang, Samara McCallum, Emmet Mack, Allen Yao, Benjamin Chen, and Chloe Deng. <br>
-          Faculty advisors: Prof. Sara Moussawi, Prof. Naama Ilany-Tzur, Prof. Larry Heimann, and Prof. Julia Poepping.</p>
+        <p>Acknowledgements: This website is the outcome of a student project in Mobile Web Design and Development
+            (67-240) and is maintained by student led effort. <br>
+            Credits: Website prototyping and development © Amalia Kutin, Evelynn Chen, Leo Hsu (2023), Erin Dieringer,
+            Zoe Feng, Arnav Luthra, Abbey Mui and Pooja Penninti (2015). <br>
+            Website maintenance © Stephanie Pang, Samara McCallum, Emmet Mack, Allen Yao, Benjamin Chen, and Chloe Deng.
+            <br>
+            Faculty advisors: Prof. Sara Moussawi, Prof. Naama Ilany-Tzur, Prof. Larry Heimann, and Prof. Julia
+            Poepping.</p>
     </footer>
 </body>
