--- a/projects-page/projects.html
+++ b/projects-page/projects.html
@@ -14,10 +14,11 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light navbar-custom" style="background-color: #941120;">
         <a class="navbar-brand mr-auto" href="#">
-            <img src="../assets/CMU_White.png" width="350" height="35" alt="" loading="lazy">
+            <img src="../assets/redesignLogo.png" width="186.6" height="60" alt="CMU IS Logo" loading="lazy">
         </a>
-        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -326,12 +327,18 @@
 
     <footer class="blog-footer">
         <a href="https://www.cmu.edu/information-systems/" target="_blank">
-        <img src="../assets/CMU_White.png" alt="CMU logo"></a>
+            <img src="../assets/redesignLogo.png" width="186.6" height="75" alt="CMU IS Logo"></a>
+        </a>
         <br>
-        <p>Acknowledgements: This website is the outcome of a student project in Mobile Web Design and Development (67-240) and is maintained by student led effort. <br>
-          Credits: Website prototyping and development © Amalia Kutin, Evelynn Chen, Leo Hsu (2023), Erin Dieringer, Zoe Feng, Arnav Luthra, Abbey Mui and Pooja Penninti (2015). <br>
-          Website maintenance © Stephanie Pang, Samara McCallum, Emmet Mack, Allen Yao, Benjamin Chen, and Chloe Deng. <br>
-          Faculty advisors: Prof. Sara Moussawi, Prof. Naama Ilany-Tzur, Prof. Larry Heimann, and Prof. Julia Poepping.</p>
+        <p>Acknowledgements: This website is the outcome of a student project in Mobile Web Design and Development
+            (67-240) and is maintained by student led effort. <br>
+            Credits: Website prototyping and development © Amalia Kutin, Evelynn Chen, Leo Hsu (2023), Erin Dieringer,
+            Zoe Feng, Arnav Luthra, Abbey Mui and Pooja Penninti (2015). <br>
+            Website maintenance © Stephanie Pang, Samara McCallum, Emmet Mack, Allen Yao, Benjamin Chen, and Chloe Deng.
+            <br>
+            Faculty advisors: Prof. Sara Moussawi, Prof. Naama Ilany-Tzur, Prof. Larry Heimann, and Prof. Julia
+            Poepping.
+        </p>
     </footer>
 
 </body>
