fixing merge conflicts

--- a/testimonials-page/testimonials.html
+++ b/testimonials-page/testimonials.html
@@ -55,6 +55,10 @@
 
   <!-- MODALS -->
   <div class="container">
+
+    <div class="form-row">
+      <div id="all-testimonials" class="w-100"></div>
+    </div>
     <div class="modal fade" id="testimonialModal" tabindex="-1" role="dialog" aria-labelledby="testimonialModalLabel"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
