--- a/testimonials-page/testimonials.html
+++ b/testimonials-page/testimonials.html
@@ -3,11 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="../tools/nav-bar/navStyles.css">
 </head>
 
@@ -54,40 +51,10 @@
 
 
   <!-- MODALS -->
-  <div class="container">
-
-    <div class="form-row">
-      <div id="all-testimonials" class="w-100"></div>
-    </div>
-    <div class="modal fade" id="testimonialModal" tabindex="-1" role="dialog" aria-labelledby="testimonialModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="testimonialModalLabel">Title</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body text-center">
-            <div id="testimonialImageModal">
-              <img src="" alt="Image" class="img-fluid mw-100 mh-100 mb-3" id="modalImage">
-            </div>
-
-            <h6 id="position" class="text-left font-weight-normal"></h6>
-
-            <h6 id="organization" class="text-left font-weight-normal"></h6>
-
-            <h6 id="quote" class="mt-3 text-left font-weight-normal"></h6>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div class="container mt-5" id="testimonial-container"></div>
 
 
-  <footer class="blog-footer">
+<footer class="blog-footer">
     <a href="https://www.cmu.edu/information-systems/" target="_blank">
       <img src="../assets/redesignLogo.png" width="186.6" height="75" alt="CMU IS Logo"></a>
     <br>
@@ -97,7 +64,12 @@
       Feng, Arnav Luthra, Abbey Mui and Pooja Penninti (2015). <br>
       Website maintenance © Stephanie Pang, Samara McCallum, Emmet Mack, Allen Yao, Benjamin Chen, and Chloe Deng. <br>
       Faculty advisors: Prof. Sara Moussawi, Prof. Naama Ilany-Tzur, Prof. Larry Heimann, and Prof. Julia Poepping.</p>
-  </footer>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="./testimonials.js" defer></script>
 
 </body>
 
