--- a/testimonials-page/testimonials.html
+++ b/testimonials-page/testimonials.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="../tools/nav-bar/navStyles.css">
+  <link rel="stylesheet" href="./testimonials.css" defer>
 </head>
 
 <body>
