--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../cmu-is-consulting/tools/nav-bar/navStyles.css">
+    <link rel="stylesheet" href="home-page/homepage.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -53,6 +54,34 @@
             </ul>
         </div>
     </nav>
+    <div class="main">
+        <div class="top-section">
+            <a class="header-img" title="temp pic"><img src="assets/temporary-header.jpg"/></a>
+        </div>
+        <div class="introduction">
+            <h4>Partnering with Carnegie Mellon Undergraduates</h4>
+            <p>Community partners gain access to valuable student consultation, working alongside a student team to solve their problems using technology. 
+                Student teams are committed to delivering high-quality solutions that will make a lasting impact. 
+                Get in contact with us now to explore possibilities!</p>
+        </div>
+        <div class="statistics">
+
+        </div>
+        <div class="video">
+            
+        </div>
+        <div class="project-details">
+            <h4>Project Details</h4>
+            <p>Students work with community partners throughout the semester. Partners have various responsibilities during this time:
+                <ul>
+                <li>Attend kick-off and final presentation meetings in person</li>
+                <li>Attend weekly meetings with students to provide feedback on progres</li>
+                <li>Maintain communication with professor and students via email and Slack</li>
+                <li>Provide resources for students upon request</li>
+                </ul>
+                </p>
+        </div>
+    </div>
     <div class="container">
         <div class="row py-2">
             <div class="col-md-4 py-1">
