latest homepage progress

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
     <div class="main">
         <div class="top-section">
             <a class="header-img" title="temp pic"><img src="assets/temporary-header.jpg"/></a>
+            <div class="header-text">
+                <h1>Technology Consulting + Web Design</h1>
+            </div>
         </div>
         <div class="introduction">
             <h4>Partnering with Carnegie Mellon Undergraduates</h4>
