--- a/index.html
+++ b/index.html
@@ -85,17 +85,24 @@
                 </p>
         </div>
     </div>
-    <div class="container">
+    <div class="container mt-5">
         <div class="row py-2">
-            <div class="col-md-4 py-1">
-                <div class="card">
-                    <div class="card-body">
-                        <canvas id="chDonut1"></canvas>
-                    </div>
-                </div>
+          <div class="col-md-4 col-12 py-1">
+            <div class="card">
+              <div class="card-body">
+                <canvas id="chDonut1" width="200" height="205"></canvas>
+              </div>
             </div>
+          </div>
+          <div class="col-md-6 col-12 py-1">
+            <div class="card">
+              <div class="card-body">
+                <canvas id="chBubbleChart" width="200" height="125"></canvas>
+              </div>
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
     <footer class="blog-footer">
         <a href="https://www.cmu.edu/information-systems/" target="_blank">
             <img src="./assets/redesignLogo.png" width="186.6" height="75" alt="CMU IS Logo"></a>
