--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
     </div>
     <div class="container mt-5">
-        <div class="row py-2">
+        <div class="row py-2 d-flex justify-content-center">
           <div class="col-md-4 col-12 py-1">
             <div class="card">
               <div class="card-body">
