fixed sdg dropdown getting pushed up bug

--- a/projects-page/projects.html
+++ b/projects-page/projects.html
@@ -54,7 +54,7 @@
 
     <div class="container">
         <div class="form-row">
-            <div class="form-group col-sm-6 col-md-3" id="sdg-filter">
+            <div class="form-group col-sm-12 col-lg-4" id="sdg-filter">
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle btn-block text-left" type="button"
                         id="sdgGoalsButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -180,7 +180,7 @@
                 <div id="selectedSDGTags"></div>
             </div>
 
-            <div class="form-group col-sm-6 col-md-3" id="tech-filter">
+            <div class="form-group col-sm-12 col-lg-4" id="tech-filter">
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle btn-block text-left" type="button"
                         id="techImplementedButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -287,7 +287,7 @@
                 <div id="selectedTechTags"></div>
             </div>
 
-            <div class="form-group col-sm-12 col-md-6" id="search-filter">
+            <div class="form-group col-sm-12 col-lg-4" id="search-filter">
                 <input type="text" class="form-control" id="search" placeholder="Search...">
             </div>
             <div id="all-projects" class="w-100"></div>
