homepage sections added

--- a/index.html
+++ b/index.html
@@ -68,10 +68,31 @@
                 Get in contact with us now to explore possibilities!</p>
         </div>
         <div class="statistics">
-
+            <h4>Impact</h4>
+            <p>From 2013 to 2023, 140 unique community partners worked with us. 220 project teams have contributed 540 student hours and 
+                90 faculty advising hours per project - that's 137,500 hours total to the community. 35% of community partners return, and 8 have 
+                partnered with us more than 4 times.</p>
+            <div class="container mt-5">
+                <div class="row py-2 d-flex justify-content-center">
+                  <div class="col-md-4 col-12 py-1">
+                    <div class="card">
+                      <div class="card-body">
+                        <canvas id="chDonut1" width="200" height="205"></canvas>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6 col-12 py-1">
+                    <div class="card">
+                      <div class="card-body">
+                        <canvas id="chBubbleChart" width="200" height="125"></canvas>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </div>
         <div class="video">
-            
+            <h4>Video placeholder</h4>
         </div>
         <div class="project-details">
             <h4>Project Details</h4>
@@ -83,26 +104,29 @@
                 <li>Provide resources for students upon request</li>
                 </ul>
                 </p>
+            <h4>Fall semester</h4>
+            <h6>Mobile Web Design and Development Elective</h6>
+            <ul>
+                <li>This course emphasizes design and user-experience with a web or app interface</li>
+                <li>Small teams work with partners to solidify a project vision and deliver multiple solution prototypes</li>
+                <li>Students leverage a user-centered approach to wireframes, client feedback, and prototype implementation</li>
+            </ul>
+            <div class="timeline">
+                <img src="assets/67240 timeline.png">
+            </div>
+            <h4>Spring semester</h4>
+            <h6>Information Systems Consulting Project Capstone</h6>
+            <ul>
+                <li>Small teams develop information system solutions to meet management needs</li>
+                <li>Teams propose, define, design, and implement an application with the project client</li>
+                <li>Teams provide a solution that fits the client's objectives, constraints, and capabilities</li>
+            </ul>
+            <div class="timeline">
+                <img src="assets/67373 timeline.png">
+            </div>
         </div>
     </div>
-    <div class="container mt-5">
-        <div class="row py-2 d-flex justify-content-center">
-          <div class="col-md-4 col-12 py-1">
-            <div class="card">
-              <div class="card-body">
-                <canvas id="chDonut1" width="200" height="205"></canvas>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-12 py-1">
-            <div class="card">
-              <div class="card-body">
-                <canvas id="chBubbleChart" width="200" height="125"></canvas>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+   
     <footer class="blog-footer">
         <a href="https://www.cmu.edu/information-systems/" target="_blank">
             <img src="./assets/redesignLogo.png" width="186.6" height="75" alt="CMU IS Logo"></a>
