removed dead code, navbar logo now goes to cmu is page

--- a/projects-page/projects.html
+++ b/projects-page/projects.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light navbar-custom" style="background-color: #941120;">
-        <a class="navbar-brand mr-auto" href="#">
+        <a class="navbar-brand mr-auto" href="https://www.cmu.edu/information-systems/" target="_blank">
             <img src="../assets/redesignLogo.png" width="186.6" height="60" alt="CMU IS Logo" loading="lazy">
         </a>
         <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
