--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 </head>
 
 <body>
-    <!-- homepage code -->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light navbar-custom" style="background-color: #941120;">
-        <a class="navbar-brand mr-auto" href="#">
+        <a class="navbar-brand mr-auto" href="https://www.cmu.edu/information-systems/" target="_blank">
             <img src="./assets/redesignLogo.png" width="186.6" height="60" alt="CMU IS Logo" loading="lazy">
         </a>
         <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
@@ -27,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto nav-justified">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home </a>
+                    <a class="nav-link" href="">Home </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../cmu-is-consulting/projects-page/projects.html">Projects <span
