added projects page documentation

--- a/projects-page/projects.html
+++ b/projects-page/projects.html
@@ -53,6 +53,7 @@
     </nav>
 
     <div class="container">
+        <!-- filters -->
         <div class="form-row">
             <div class="form-group col-sm-12 col-lg-4" id="sdg-filter">
                 <div class="dropdown">
