--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
     </nav>
     <div class="main">
         <div class="top-section">
-            <a class="header-img" title="temp pic"><img src="assets/temporary-header.jpg"/></a>
-            <div class="header-text">
-                <h1>Technology Consulting + Web Design</h1>
-            </div>
+            <a title="temp pic"><img src="assets/header-static.png"/></a>
         </div>
         <div class="introduction">
             <h4>Partnering with Carnegie Mellon Undergraduates</h4>
@@ -98,7 +95,7 @@
             <p>Students work with community partners throughout the semester. Partners have various responsibilities during this time:
                 <ul>
                 <li>Attend kick-off and final presentation meetings in person</li>
-                <li>Attend weekly meetings with students to provide feedback on progres</li>
+                <li>Attend weekly meetings with students to provide feedback on progress</li>
                 <li>Maintain communication with professor and students via email and Slack</li>
                 <li>Provide resources for students upon request</li>
                 </ul>
