added open sans font

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script src="../cmu-is-consulting/index.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -55,57 +60,63 @@
     </nav>
     <div class="main">
         <div class="top-section">
-            <a title="temp pic"><img src="assets/header-static.png"/></a>
+            <a title="CMU Hamburg Hall"><img src="assets/header-static.png" /></a>
         </div>
         <div class="introduction">
             <h4>Partnering with Carnegie Mellon Undergraduates</h4>
-            <p>Community partners gain access to valuable student consultation, working alongside a student team to solve their problems using technology. 
-                Student teams are committed to delivering high-quality solutions that will make a lasting impact. 
+            <p>Community partners gain access to valuable student consultation, working alongside a student team to
+                solve their problems using technology.
+                Student teams are committed to delivering high-quality solutions that will make a lasting impact.
                 Get in contact with us now to explore possibilities!</p>
         </div>
         <div class="statistics">
             <h4>Impact</h4>
-            <p>From 2013 to 2023, 140 unique community partners worked with us. 220 project teams have contributed 540 student hours and 
-                90 faculty advising hours per project - that's 137,500 hours total to the community. 35% of community partners return, and 8 have 
+            <p>From 2013 to 2023, 140 unique community partners worked with us. 220 project teams have contributed 540
+                student hours and
+                90 faculty advising hours per project - that's 137,500 hours total to the community. 35% of community
+                partners return, and 8 have
                 partnered with us more than 4 times.</p>
             <div class="container mt-5">
                 <div class="row py-2 d-flex justify-content-center">
-                  <div class="col-md-4 col-12 py-1">
-                    <div class="card">
-                      <div class="card-body">
-                        <canvas id="chDonut1" width="200" height="205"></canvas>
-                      </div>
+                    <div class="col-md-4 col-12 py-1">
+                        <div class="card">
+                            <div class="card-body">
+                                <canvas id="chDonut1" width="200" height="205"></canvas>
+                            </div>
+                        </div>
                     </div>
-                  </div>
-                  <div class="col-md-6 col-12 py-1">
-                    <div class="card">
-                      <div class="card-body">
-                        <canvas id="chBubbleChart" width="200" height="125"></canvas>
-                      </div>
+                    <div class="col-md-6 col-12 py-1">
+                        <div class="card">
+                            <div class="card-body">
+                                <canvas id="chBubbleChart" width="200" height="125"></canvas>
+                            </div>
+                        </div>
                     </div>
-                  </div>
                 </div>
-              </div>
+            </div>
         </div>
         <div class="video">
             <h4>Video placeholder</h4>
         </div>
         <div class="project-details">
             <h4>Project Details</h4>
-            <p>Students work with community partners throughout the semester. Partners have various responsibilities during this time:
-                <ul>
+            <p>Students work with community partners throughout the semester. Partners have various responsibilities
+                during this time:
+            <ul>
                 <li>Attend kick-off and final presentation meetings in person</li>
                 <li>Attend weekly meetings with students to provide feedback on progress</li>
                 <li>Maintain communication with professor and students via email and Slack</li>
                 <li>Provide resources for students upon request</li>
-                </ul>
-                </p>
+            </ul>
+            </p>
             <h4>Fall semester</h4>
             <h6>Mobile Web Design and Development Elective</h6>
             <ul>
                 <li>This course emphasizes design and user-experience with a web or app interface</li>
-                <li>Small teams work with partners to solidify a project vision and deliver multiple solution prototypes</li>
-                <li>Students leverage a user-centered approach to wireframes, client feedback, and prototype implementation</li>
+                <li>Small teams work with partners to solidify a project vision and deliver multiple solution prototypes
+                </li>
+                <li>Students leverage a user-centered approach to wireframes, client feedback, and prototype
+                    implementation</li>
             </ul>
             <div class="timeline">
                 <img src="assets/67240 timeline.png">
@@ -122,7 +133,7 @@
             </div>
         </div>
     </div>
-   
+
     <footer class="blog-footer">
         <a href="https://www.cmu.edu/information-systems/" target="_blank">
             <img src="./assets/redesignLogo.png" width="186.6" height="75" alt="CMU IS Logo"></a>
@@ -135,6 +146,7 @@
             Website maintenance © Stephanie Pang, Samara McCallum, Emmet Mack, Allen Yao, Benjamin Chen, and Chloe Deng.
             <br>
             Faculty advisors: Prof. Sara Moussawi, Prof. Naama Ilany-Tzur, Prof. Larry Heimann, and Prof. Julia
-            Poepping.</p>
+            Poepping.
+        </p>
     </footer>
 </body>
