--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
             </div>
         </div>
         <div class="video">
-            <h4>Video placeholder</h4>
+            <h4>Learn more about the program</h4>
+            <iframe src="https://drive.google.com/file/d/1L85lT7NXSqkPgneidp0_3NpVnUCv9irz/preview" width="640" height="480" allow="autoplay"></iframe>
         </div>
         <div class="project-details">
             <h4>Project Details</h4>
@@ -109,27 +110,35 @@
                 <li>Provide resources for students upon request</li>
             </ul>
             </p>
-            <h4>Fall semester</h4>
-            <h6>Mobile Web Design and Development Elective</h6>
-            <ul>
-                <li>This course emphasizes design and user-experience with a web or app interface</li>
-                <li>Small teams work with partners to solidify a project vision and deliver multiple solution prototypes
-                </li>
-                <li>Students leverage a user-centered approach to wireframes, client feedback, and prototype
-                    implementation</li>
-            </ul>
-            <div class="timeline">
-                <img src="assets/67240 timeline.png">
-            </div>
-            <h4>Spring semester</h4>
-            <h6>Information Systems Consulting Project Capstone</h6>
-            <ul>
-                <li>Small teams develop information system solutions to meet management needs</li>
-                <li>Teams propose, define, design, and implement an application with the project client</li>
-                <li>Teams provide a solution that fits the client's objectives, constraints, and capabilities</li>
-            </ul>
-            <div class="timeline">
-                <img src="assets/67373 timeline.png">
+            <div class="timeline-grid">
+                <div class="fall">
+                    <h4>Fall Semester</h4>
+                    <h6>Mobile Web Design and Development Elective</h6>
+                    <ul>
+                        <li>This course emphasizes design and user-experience with a web or app interface</li>
+                        <li>Small teams work with partners to solidify a project vision and deliver multiple solution prototypes
+                        </li>
+                        <li>Students leverage a user-centered approach to wireframes, client feedback, and prototype
+                            implementation</li>
+                    </ul>
+                </div>
+                <div class="spring">
+                    <h4>Spring Semester</h4>
+                    <h6>Information Systems Consulting Project Capstone</h6>
+                    <ul>
+                        <li>Small teams develop information system solutions to meet management needs</li>
+                        <li>Teams propose, define, design, and implement an application with the project client</li>
+                        <li>Teams provide a solution that fits the client's objectives, constraints, and capabilities</li>
+                    </ul>
+                </div>
+                <div id="timeline" class="fall-graphic">
+                    <img src="assets/67240 timeline.png">
+                </div>
+                    
+                <div id="timeline" class="spring-graphic">
+                    <img src="assets/67373 timeline.png">
+                </div>
+                
             </div>
         </div>
     </div>
